Add security layer

--- a/Morpheo.Extensions/Morpheo.Extensions.csproj
+++ b/Morpheo.Extensions/Morpheo.Extensions.csproj
@@ -10,4 +10,8 @@
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Morpheo.Abstractions\Morpheo.Abstractions.csproj" />
+  </ItemGroup>
+
 </Project>
